--- a/html/home.html
+++ b/html/home.html
@@ -5,4 +5,10 @@
         <h2 class="script-style centered">Alex and Courtney</h2>
         <p class="script-style centered">Bloomington, IN<br>6/24/17</p>
     </div>
+    <div class="panel panel-primary">
+        <div class="panel-heading">How we met</div>
+        <div class="panel-body">
+            <span>Courtney and Alex met via the dating website OkCupid in January 2014. Alex suggested they grab drinks at the Green Mill Cocktail lounge for their first date. Courtney was impressed with the suggestion: she had always been intrigued by the Green Mill and she would only have to travel 2 stops on the L to get there (Chicago in January is very cold and also Courtney is lazy). That first date led to more dates which led to moving in together and building a life together. They have a mutual love of terribly unhealthy food (pizza! burritos! anything that is fried!) and 30-min comedies on Netflix (30Rock! Parks and Rec! Bob’s Burgers!). They’ve survived and supported each other through a cross-country to move to a city where they didn’t know anyone, family crises, and trips to IKEA to pick out major pieces of furniture they would need to assemble themselves. They’re very excited to get married and hope you can join them in celebrating their future together.</span>
+        </div>
+    </div>
 </div>
