--- a/html/events.html
+++ b/html/events.html
@@ -1,1 +1,8 @@
-<div>Events!</div>
+<div class="panel panel-primary">
+    <div class="panel-heading">Ceremony</div>
+    <div class="panel-body">
+        <span>The ceremony and reception will take place in Bloomington, Indiana on June 24, 2017 at the Indiana Memorial Union. The ceremony will be held outside in the Tree Suite Garden (weather permitting, of course) and will be followed by cocktails, dinner, and dancing in the Tudor Room.</span>
+        <br><span><a href="dates/wedding.ics">Add the wedding to your calendar!</a></span>
+        <br><span><a href="dates/reception.ics">Add the reception to your calendar!</a></span>
+    </div>
+</div>
