Add some more copy. Replace panel-primary with panel-default.

--- a/html/bloomington.html
+++ b/html/bloomington.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="panel panel-primary">
+    <div class="panel panel-default">
         <div class="panel-heading">Places to eat</div>
         <div class="panel-body">
             <place href="http://runciblespoonrestaurant.com/" name="Runcible Spoon" address="412 E. 6th Street" zip="47408">Serves breakfast, lunch, and dinner. Would recommend this spot for any of their breakfast options and go ahead and treat yo’ self to that pitcher of mimosas you can order. If you go here be sure to check out their bathroom--just trust me.</place>
@@ -10,10 +10,18 @@
             <place href="http://www.motherbearspizza.com/" name="Mother Bears" address="1428 E. 3rd Street" zip="47401">Open for lunch and dinner. This is hands-down the best pizza in Bloomington. Their traditional crust is a deep dish and has bit of Pequods vibe for you Chicago folks. I recommend The Deluxe and the Cheesy garlic bread.</place>
         </div>
     </div>
-    <div class="panel panel-primary">
+    <div class="panel panel-default">
         <div class="panel-heading">Things to do</div>
         <div class="panel-body">
-
+            You can definitely spend the whole time you’re not partying at the wedding eating (and we wouldn’t blame you—there are so many awesome food options and eating is excellent) but if you don’t want to do that (because that would actually be really hard probably) here are some fun things you can do:\
+            <ul>
+                <li>Check out the Lily Library. This is a rare book and manuscript library.</li>
+                <li>Visit the IU Art Museum (located across the street from the Lily Library).</li>
+                <li>For the young (or just young at heart) visit The Wonderlab.</li>
+                <li>Walk the B-Line Trail for some scenic exercise.</li>
+                <li>Go on a Brewery Tour at Upland Brewing.</li>
+                <li>Get some of that famous Indiana corn: the Bloomington Farmer's Market is on Saturday from 8am to 1pm and definitely worth a visit.</li>
+            </ul>
         </div>
     </div>
 </div>
