--- a/html/party.html
+++ b/html/party.html
@@ -1,4 +1,4 @@
-<div class="panel panel-primary">
+<div class="panel panel-defualt">
     <div class="panel-heading">Wedding Party</div>
     <div class="panel-body">
         <person name="Antora Delong">Maid of Honor</person>
