--- a/html/place.html
+++ b/html/place.html
@@ -4,6 +4,7 @@
         <span>{{address}}</span><br>
         <span>Bloomington, IN {{zip}}</span>
     </a>
+    <span ng-show="phone"><br>{{phone}}</span><br><br>
     <div ng-transclude></div>
     <hr>
 </div>
