--- a/html/nav.html
+++ b/html/nav.html
@@ -14,9 +14,10 @@
                 <!-- Uncomment when RSVP ready
                 <li ng-class="{ active: isActive('#/rsvp')}"><a href="#/rsvp">RSVP</a></li> -->
                 <li ng-class="{ active: isActive('#/events')}"><a href="#/events">Events</a></li>
+                <!-- Uncomment probably never
                 <li ng-class="{ active: isActive('#/party')}"><a href="#/party">Wedding Party</a></li>
+                <li ng-class="{ active: isActive('#/bloomington')}"><a href="#/bloomington">Bloomington</a></li> -->
                 <li ng-class="{ active: isActive('#/travel')}"><a href="#/travel">Travel</a></li>
-                <li ng-class="{ active: isActive('#/bloomington')}"><a href="#/bloomington">Bloomington</a></li>
                 <li ng-class="{ active: isActive('#/registry')}"><a href="#/registry">Registry</a></li>
             </ul>
         </div>
