--- a/html/home.html
+++ b/html/home.html
@@ -1,7 +1,7 @@
 <div id="home">
-    <div class="jumbotron">
+    <div class="jumbotron centered">
         <!-- PLACEHOLDER IMAGE -->
-        <img src="imgs/placeholder.jpg" class="img-responsive" alt="Wow, such love">
+        <img src="imgs/0.png" class="img-responsive img-circle center-block" alt="Wow, such love">
         <h2 class="script-style centered">Alex and Courtney</h2>
         <p class="script-style centered">Bloomington, IN<br>6/24/17</p>
     </div>
