--- a/html/registry.html
+++ b/html/registry.html
@@ -2,19 +2,19 @@
     <hr>
     <div class="centered">
         <a href="https://www.amazon.com/wedding/courtney-deckard-alex-webster-bloomington-june-2017/registry/12P1SIIEW5ARV">
-            <img src="imgs/Amazon_logo.png" alt="Amazon">
+            <img class="img-responsive center-block" src="imgs/Amazon_logo.png" alt="Amazon">
         </a>
     </div>
     <hr>
     <div class="centered">
         <a href="http://www.crateandbarrel.com/gift-registry/courtney-deckard/r5585520">
-            <img src="imgs/CrateandBarrelLogo.png" alt="Crate and Barrel">
+            <img class="img-responsive center-block" src="imgs/CrateandBarrelLogo.png" alt="Crate and Barrel">
         </a>
     </div>
     <hr>
     <div class="centered">
         <a href="https://www.macys.com/wgl/registry/guest/6652013">
-            <img src="imgs/Macys_Inc.png" alt="Macy's">
+            <img class="img-responsive center-block" src="imgs/Macys_Inc.png" alt="Macy's">
         </a>
     </div>
     <hr>
