Add under construction and fix registry width issue.

--- a/html/registry.html
+++ b/html/registry.html
@@ -1,4 +1,4 @@
-<div>
+<div class="centered full-width">
     <hr>
     <div class="centered">
         <a href="https://www.amazon.com/wedding/courtney-deckard-alex-webster-bloomington-june-2017/registry/12P1SIIEW5ARV">
