Fix the style of the announcement

--- a/html/home.html
+++ b/html/home.html
@@ -3,7 +3,7 @@
         <!-- PLACEHOLDER IMAGE -->
         <img src="imgs/0.png" class="img-responsive img-circle center-block" alt="Wow, such love">
         <h2 class="script-style centered">Alex and Courtney</h2>
-        <p class="script-style centered">Bloomington, IN<br>6/24/17</p>
+        <p class="script-style centered">Bloomington, Indiana<br>6/24/17</p>
     </div>
     <div class="panel panel-default">
         <div class="panel-heading">How we met</div>
