--- a/html/nav.html
+++ b/html/nav.html
@@ -11,14 +11,15 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <!-- Uncomment when RSVP ready
-                <li ng-class="{ active: isActive('#/rsvp')}"><a href="#/rsvp">RSVP</a></li> -->
-                <li ng-class="{ active: isActive('#/events')}"><a href="#/events">Events</a></li>
+                <li ng-class="{ active: isActive('#/howwemet')}"><a href="#/events">How We Met</a></li>
+                <li ng-class="{ active: isActive('#/events')}"><a href="#/events">Ceremony</a></li>
                 <!-- Uncomment probably never
                 <li ng-class="{ active: isActive('#/party')}"><a href="#/party">Wedding Party</a></li>
                 <li ng-class="{ active: isActive('#/bloomington')}"><a href="#/bloomington">Bloomington</a></li> -->
-                <li ng-class="{ active: isActive('#/travel')}"><a href="#/travel">Travel</a></li>
+                <li ng-class="{ active: isActive('#/travel')}"><a href="#/travel">Accomodations</a></li>
                 <li ng-class="{ active: isActive('#/registry')}"><a href="#/registry">Registry</a></li>
+                <!-- Uncomment when RSVP ready
+                <li ng-class="{ active: isActive('#/rsvp')}"><a href="#/rsvp">RSVP</a></li> -->
             </ul>
         </div>
     </div>
