Quick fixups for pages etc.

--- a/html/nav.html
+++ b/html/nav.html
@@ -11,7 +11,7 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li ng-class="{ active: isActive('#/howwemet')}"><a href="#/events">How We Met</a></li>
+                <li ng-class="{ active: isActive('#/howwemet')}"><a href="#/howwemet">How We Met</a></li>
                 <li ng-class="{ active: isActive('#/events')}"><a href="#/events">Ceremony</a></li>
                 <!-- Uncomment probably never
                 <li ng-class="{ active: isActive('#/party')}"><a href="#/party">Wedding Party</a></li>
