--- a/html/home.html
+++ b/html/home.html
@@ -1,5 +1,5 @@
 <div id="home">
     <div class="panel panel-default">
-        <img src="imgs/homepage-text.png" class="img-responsive img-circle center-block" alt="Courtney + Alex are getting married!">
+        <img src="imgs/homepage-text.png" class="img-responsive center-block" alt="Courtney + Alex are getting married!">
     </div>
 </div>
