Some quick style changes: - Add bg - Add some padding on the announcement - Make the announcement div semi-transparent

--- a/html/home.html
+++ b/html/home.html
@@ -1,5 +1,5 @@
 <div id="home">
-    <div class="panel panel-default">
+    <div class="panel panel-default announce-container">
         <img src="imgs/homepage-text.png" class="img-responsive center-block" alt="Courtney + Alex are getting married!">
     </div>
 </div>
