--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Courtney and Alex</title>
     <link rel="stylesheet" type="text/css" href="css/my.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway%3A400%2C600%2C500%7CLibre+Baskerville%3A400i%2C400&amp;subset=latin" type="text/css" media="all">
     <link rel="stylesheet" type="text/css" href="css/style.min.css">
