change registry link

--- a/html/registry.html
+++ b/html/registry.html
@@ -54,7 +54,7 @@
                                     <div class="fusion-column-content-centered" style="min-height: 58px;">
                                         <div class="fusion-column-content">
                                             <span class="fusion-imageframe imageframe-none imageframe-3 hover-type-none">
-                                                <a class="fusion-no-lightbox" href="http://www.crateandbarrel.com/gift-registry/courtney-deckard/r5585520" target="_blank" rel="noopener noreferrer" data-external="true">
+                                                <a class="fusion-no-lightbox" href="https://www.macys.com/wgl/registry/guest/6652013" target="_blank" rel="noopener noreferrer" data-external="true">
                                                     <img src="imgs/Macys_Inc.png" width="" height="" alt="" class="img-responsive">
                                                 </a>
                                             </span>
